# roq-hyperliquid

./: CHANGELOG.md  CMakeLists.txt  README.md
benchmark/: .gitignore  CMakeLists.txt  create_order.cpp
conda/: meta.yaml
share/: config.toml
share/flags/prod/: flags.cfg
share/flags/test/: flags.cfg
src/roq/: CMakeLists.txt
src/roq/bybit/: .gitignore  README.md  account.cpp  account.hpp  api.cpp  api.hpp  application.cpp  application.hpp  config.cpp  config.hpp  drop_copy.cpp  drop_copy.hpp  gateway.cpp  gateway.hpp  index.rst  live.sh  main.cpp  market_data.cpp  market_data.hpp  order_entry.cpp  order_entry.hpp  order_entry_state.json  rest.cpp  rest.hpp  rest_state.json  settings.cpp  settings.hpp  shared.cpp  shared.hpp  test.sh
src/roq/bybit/flags/: .gitignore  CMakeLists.txt  download.json  flags.json  mbp.json  misc.json  request.json  rest.json  ws.json
src/roq/bybit/json/: .gitignore  account_info.json  account_info_result.json  account_type.json  amend_order.json  amend_order_result.json  auth.json  cancel_all_orders.json  cancel_all_orders_result.json  cancel_all_orders_result_item.json  cancel_order.json  cancel_order_result.json  cancel_type.json  category.json  contract_type.json  error.json  event_type.json  exec_type.json  execution.json  execution_2.json  execution_data_item.json  execution_result.json  execution_result_item.json  instrument_info.json  instrument_info_result.json  instrument_info_result_item.json  leverage_filter.json  lot_size_filter.json  map.cpp  map.hpp  message.json  open_orders.json  open_orders_result.json  open_orders_result_item.json  operation.json  options_type.json  order.json  order_book.json  order_book_data.json  order_book_level.json  (+39 more)
src/roq/bybit/tools/: .gitignore  CMakeLists.txt  api.json  crypto.cpp  crypto.hpp
src/roq/hyperliquid/: .gitignore  CMakeLists.txt  TODO  account.cpp  account.hpp  api.cpp  api.hpp  application.cpp  application.hpp  config.cpp  config.hpp  drop_copy.cpp  drop_copy.hpp  gateway.cpp  gateway.hpp  index.rst  live.sh  main.cpp  market_data.cpp  market_data.hpp  order_entry.cpp  order_entry.hpp  order_entry_state.hpp  order_entry_state.json  rest.cpp  rest.hpp  rest_state.hpp  rest_state.json  settings.cpp  settings.hpp  shared.cpp  shared.hpp  test.sh
src/roq/hyperliquid/bridge/: .gitignore  (+6 more)
src/roq/hyperliquid/json/: .gitignore  CMakeLists.txt  account_info.json  account_info_result.json  account_type.json  active_asset_ctx.json  active_asset_ctx_data.json  active_asset_ctx_data_ctx.json  amend_order.json  amend_order_result.json  auth.json  bbo.json  bbo_data.json  bbo_data_bbo_item.json  cancel_all_orders.json  cancel_all_orders_result.json  cancel_all_orders_result_item.json  cancel_order.json  cancel_order_ack.json  cancel_order_ack_parser.cpp  cancel_order_ack_parser.hpp  cancel_order_ack_response.json  cancel_order_ack_response_data.json  cancel_order_ack_response_data_statuses_item.json  cancel_order_result.json  cancel_type.json  category.json  channel.json  contract_type.json  create_order_ack.json  create_order_ack_parser.cpp  create_order_ack_parser.hpp  create_order_ack_response.json  create_order_ack_response_data.json  create_order_ack_response_data_statuses_item.json  create_order_ack_response_data_statuses_item_filled.json  create_order_ack_response_data_statuses_item_resting.json  direction.json  error.json  event_type.json  (+125 more)
src/roq/hyperliquid/protocol/json/: .gitignore  CMakeLists.txt  action_cancel.json  action_cancel_data.json  action_cancel_data_response.json  action_cancel_data_response_payload.json  action_cancel_data_response_payload_response.json  action_cancel_data_response_payload_response_data.json  action_order.json  action_order_data.json  action_order_data_response.json  action_order_data_response_payload.json  action_order_data_response_payload_response.json  action_order_data_response_payload_response_data.json  action_order_data_response_payload_response_data_status.json  action_order_data_response_payload_response_data_status_resting.json  active_asset_ctx.json  active_asset_ctx_data.json  active_asset_ctx_data_ctx.json  bbo.json  bbo_data.json  bbo_data_bbo_item.json  cancel_order_ack.json  cancel_order_ack_parser.cpp  cancel_order_ack_parser.hpp  cancel_order_ack_response.json  cancel_order_ack_response_data.json  cancel_order_ack_response_data_statuses_item.json  channel.json  create_order_ack.json  create_order_ack_parser.cpp  create_order_ack_parser.hpp  create_order_ack_response.json  create_order_ack_response_data.json  create_order_ack_response_data_statuses_item.json  create_order_ack_response_data_statuses_item_filled.json  create_order_ack_response_data_statuses_item_resting.json  direction.json  error.json  general_error.json  (+64 more)
src/roq/hyperliquid/tools/: .gitignore  CMakeLists.txt  api.json  bignum.cpp  bignum.hpp  conversions.cpp  conversions.hpp  crypto.cpp  crypto.hpp  ecdsa.cpp  ecdsa.hpp  eip712.cpp  eip712.hpp  encoder.cpp  encoder.hpp  group.cpp  group.hpp  keccak256.cpp  keccak256.hpp  key.cpp  key.hpp  pkey.cpp  pkey.hpp  point.cpp  point.hpp  signature.hpp  tick_size_steps.cpp  tick_size_steps.hpp  wallet.cpp  wallet.hpp
test/: .gitignore  CMakeLists.txt  crypto.cpp  json_account_info.cpp  json_action_cancel.cpp  json_action_order.cpp  json_active_asset_ctx.cpp  json_amend_order.cpp  json_auth.cpp  json_bbo.cpp  json_cancel_all_orders.cpp  json_cancel_order.cpp  json_cancel_order_ack.cpp  json_create_order_ack.cpp  json_error.cpp  json_execution.cpp  json_get_clearing_house_state_ack.cpp  json_get_meta_ack.cpp  json_get_open_orders_ack.cpp  json_get_perp_dexs_ack.cpp  json_get_spot_clearing_house_state_ack.cpp  json_get_spot_meta_ack.cpp  json_get_user_fills_ack.cpp  json_instrument_info.cpp  json_l2_book.cpp  json_meta.cpp  json_meta_and_asset_contexts.cpp  json_modify_order_ack.cpp  json_notification.cpp  json_open_orders.cpp  json_order.cpp  json_order_book.cpp  json_order_updates.cpp  json_ping.cpp  json_place_order.cpp  json_pong.cpp  json_position.cpp  json_position_info.cpp  json_public_trade.cpp  json_spot_meta.cpp  (+15 more)
(+66 files in other folders)
